# node-graphql-benchmarks

./: .gitignore  .npmrc  .prettierrc  METRICS.md  README.md  benchmark-bench.js  benchmark-compare.js  package.json
benchmarks/: apollo-opentracing.js  apollo-server-fastify+graphql-jit.js  apollo-server-fastify.js  apollo-server-koa+graphql-jit+type-graphql.js  benzene-http.js  benzene-jit-http.js  bun-graphql-jit.js  core-graphql-jit-buf-fjs.js  core-graphql-jit-buf.js  core-graphql-jit-micro-worker.js  core-graphql-jit-micro.js  core-graphql-jit-str.js  fastify-graphql-jit-thread-pool.js  fastify-graphql-jit-threads-pool.js  fastify-graphql-jit-threads.js  fastify-graphql-jit-worker.js  fastify-graphql-jit.js  go-graphql.js  mercurius+graphql-jit.js  mercurius.js  rust-graphql.js  uWebSockets-graphql+jit-worker.js  uWebSockets-graphql+jit.js
lib/: autocannon.js  bench.js  choices.js  data.js  generateStatic.js
other-benchmarks/rust-gql/: Cargo.toml
other-benchmarks/rust-gql/src/: main.rs  schema.rs
startup/: METRICS.md  _process-results.js  _startup.js  apollo-opentracing.js  apollo-opentracing.js.txt  apollo-schema+async.js  apollo-schema+async.js.txt  apollo-server-express-tracing.js  apollo-server-express-tracing.js.txt  apollo-server-express.js  apollo-server-express.js.txt  apollo-server-fastify+graphql-jit.js  apollo-server-fastify.js  apollo-server-koa+graphql-jit+type-graphql.js  apollo-server-koa+graphql-jit+type-graphql.js.txt  benzene-http.js  benzene-http.js.txt  core-graphql-jit-buf-fjs.js  core-graphql-jit-buf-fjs.js.txt  core-graphql-jit-buf.js  (+57 more)
(+25 files in other folders)
